# pipewire_null_plugin

./: NULL_SINK_SEQUENCE_FLOW.md  PROJECT_SUMMARY.md  README.md  SPA_PLUGIN_SPECIFICATION.md
null/: meson.build  null-sink.c  null.c  null.h
